--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-  "DefaultConnection": "Server=localhost;Port=3307;Database=webappcs;User=inventar_webappcs;Password=inventarwebappcs;"
+  "DefaultConnection": "Server=localhost;Port=3307;Database=webappcs;User=root;Password=admin;"
   },
   "Logging": {
     "LogLevel": {
